--- a/css/form.css
+++ b/css/form.css
@@ -10,7 +10,7 @@
     }
     
     .form_login{
-        background-color: aqua;
+       background-color: rgb(253, 253, 253);
     }
     .form_register{
         background-color: tomato;
