--- a/css/social_icon.css
+++ b/css/social_icon.css
@@ -6,8 +6,14 @@
     align-items: center;
     border-radius: 50%;
     font-size: 1.2rem;
-    box-shadow: 0 4px 4px #000;
+    background-color: var(--icon-color);
+    box-shadow: 0 4px 4px #0004;
+    transition: .5s;
 
+}
 
-  
+.social_icon:hover{
+    background-color: var(--primary-color);
+    transform: translateY(-15%);
+    color: var(--text-color-light);
 }
