--- a/css/form.css
+++ b/css/form.css
@@ -5,11 +5,41 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--secundary-color);
     padding: 55px 0;
-    
+    transition: 1s;
     }
     
-    .form_login{
-       background-color: rgb(253, 253, 253);
+  
+
+    .form_register{
+      transform: translateX(-100%);
+      z-index:-1;
+      opacity: 0;
     }
    
+    .login_container.move .form_login{
+       transform: translateX(100%);
+    }
+
+    .login_container.move .form_register{
+      transform: translateX(0%);
+      z-index: 1;
+      opacity: 1;
+    }
+
+    @media (max-width:768px){
+        .form{
+        width: 100%;
+        justify-content: space-evenly;
+        }
+        .form_register{
+          position: absolute;
+          background-color: var(--primary-color);
+          color: var(--secundary-color);
+          transform: translateX(100%);
+        }
+        .login_container.move .form_register{
+         transform: translateX(0%);
+        }
+    }
