--- a/css/form_button.css
+++ b/css/form_button.css
@@ -27,3 +27,11 @@
     background-color: var(--secundary-color);
     color: var(--primary-color);
 }
+
+@media (max-width:768px){
+    .form_button{
+        background-color: var(--primary-color);
+        color: var(--secundary-color);
+        border: solid var(--secundary-color);
+    }
+}
