--- a/css/login_container.css
+++ b/css/login_container.css
@@ -7,3 +7,19 @@
     overflow: hidden;
 
 }
+
+@media (max-width:768px){
+    .login_container{
+    width: 75vw;
+    height: 75vh;
+    box-shadow: none;
+    }
+}
+
+@media (max-width:480px){
+    .login_container{
+    width: 100vw;
+    height: 100vh;
+    box-shadow: none;
+    }
+}
