--- a/css/overlay.css
+++ b/css/overlay.css
@@ -6,7 +6,14 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    padding: 60px;
+    padding: 40px;
     background-color: var(--primary-color);
+    transition: 1s;
    
 }
+
+.login_container.move .overlay:nth-child(2){
+     z-index: -1;
+     opacity: 0;
+}
+
